--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/ribbon
 spring.datasource.username=postgres
-spring.datasource.password=456456Rs456
+spring.datasource.password=
 
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
